tests/build/cases/widget_new/missing_semi_before_when1.stderr
error: expected `;`
 --> $DIR/missing_semi_before_when1.rs:7:9
  |
7 |         when *#is_pressed {
  |         ^^^^
